- draksound:
  o disable PA routing when PA is disabled (#40219)
  o grey PA routing & 5.1 sound if PA is disabled
  o make sure that switch alsa-plugins-pulseaudio is installed when
    enabling PA routing (#40533)
- handle new drivers:
  o pata: pata_sch 

Version 10.31 - 24 April 2008

- bootloader-config:
  o do not detect device.map inconsistency when "/boot" (or "/") is on Linux
    software raid (/dev/mdX), cf #28309 and #35714

Version 10.30 - 23 April 2008

- bootloader-config:
  o fix detecting device.map inconsistency when "/boot" and "/" are not on
    same "drive" (esp. when "/" is LVM and "/boot" is not, #39229)
- diskdrake:
  o ensure no "division by zero" runtime error (#34931)
- drakupdate_fstab:
  o only add formatted partitions in fstab (or else it will make
    subsequent boot fail)
- fix file descriptor leak when detecting network driver
  (mostly notable in network center and drakroam)
- list generic module in disk/ide

Version 10.29 - 3 April 2008

- service_harddrake:
  o fix detecting modules installed in new dkms locations (/dkms and
    /dkms-binary) instead of /kernel
- drakclock: write UTC setting in /etc/adjtime (#36522)

Version 10.27 - 3 April 2008

- drakboot:
  o stop workarounding glibc misconfiguration when listing users
    (#38116), it is now handled in MDK::Common (see #34279)
- draksplash:
  o do not write decimal values in theme config (#38271)
- finish-install:
  o configure urpmi media if network is up and no media are configured
    (#38202)

Version 10.25 - 1 April 2008

- DBus framework improvement

Version 10.24 - 1 April 2008

- drakups:
  o fix crash while removing an item (#34413)
- harddrake:
  o offer again to run drakxtv for TV cards (#39609)
- diskdrake:
  o allow relatime on ntfs-3g (#39666)
- diskdrake --fileshare:
  o do not ask to install nautilus-filesharing if already installed (#39544)

Version 10.22 - 27 March 2008

- partitioning wizard lirary: 
  o allow "Use free space" if there is an extended