@@ -1,4 +1,5 @@
 - draksound:
+  o advise to log out if PA is enabled/disabled
   o disable PA routing when PA is disabled (#40219)
   o grey PA routing & 5.1 sound if PA is disabled
   o make sure that switch alsa-plugins-pulseaudio is installed when
